# PricePulse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.codium/: config.yml
migrations/: env.py
migrations/versions/: d6320490ca61_init.py
src/: main.py  routes.py
src/api/olx/: api.py  parser.py
src/config/: project_config.py
src/config/database/: db_config.py
src/models/: __init__.py  create_table.py  user.py
src/models/product/: product.py
src/models/user/: user.py
