[project]
name = "uvenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.12",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
